# auxiliary

./: CMakeLists.txt
include/: auxiliary.hpp
src/: main.cpp
